# photobooth-alpha

./: index.html  package-lock.json  package.json
.github/workflows/: publish.yml
public/: downArrow.lottie  loader.lottie
src/: AnimatedRoutes.tsx  App.css  App.tsx  index.css  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: .env  config.rs  imaging.rs  lib.rs  mail.rs  main.rs  razorpay.rs
src/Components/AdminNav/: index.tsx  styles.css
src/Components/CopiesSelectable/: index.tsx  styles.css
src/Components/Footer/: index.tsx  styles.css
src/Components/Header/: index.tsx  styles.css
src/Components/Keyboard/: index.tsx  styles.css
src/Components/ModeSelectable/: index.tsx
src/Components/Numpad/: index.tsx  styles.css
src/Components/PrintSelectable/: index.tsx  styles.css
src/Contexts/: DataContext.tsx
src/Hooks/: usePayment.tsx
src/Pages/Admin/: index.tsx  styles.css
src/Pages/Admin/Mode/: index.tsx  styles.css
src/Pages/Admin/Pages/: index.tsx  styles.css
src/Pages/Admin/Pricing/: index.tsx  styles.css
src/Pages/Countdown/: index.tsx  styles.css
src/Pages/Form/Copies/: index.tsx  styles.css
src/Pages/Form/Payment/: index.tsx  styles.css
src/Pages/Form/Print/: index.tsx  styles.css
src/Pages/Greeting/: index.tsx  styles.css
src/Pages/Home/: index.tsx  styles.css
src/Pages/Mail/: index.tsx  styles.css
src/Pages/Mode/: index.tsx  styles.css
src/Pages/Passcode/: index.tsx  styles.css
src/Services/: commands.ts
src/Utils/: calculate.ts  reset.ts
